# orphism

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
src/: error.rs  lib.rs  model.rs  runtime.rs
src/model/: display_info.rs  expression.rs  motion.rs  motion_sync.rs  physics.rs  pose.rs  sound.rs  texture.rs
